# alderaan

./: .gitignore  .readthedocs.yml  ALD_01a_detrend_and_estimate_ttvs.py  ALD_02i_fit_transit_shape_independently.ipynb  ALD_02i_fit_transit_shape_independently.py  K00137.03.fits  LICENSE  README.md  build_cumulative_koi_catalog.ipynb  build_kepler_catalog.ipynb  combine_umbrellas.ipynb  compare_injected_vs_quick_ttvs.ipynb  detrend_and_estimate_noise.ipynb  detrend_and_estimate_noise.py  dfm_exoplanet_testing.ipynb  download_from_MAST.ipynb  download_from_MAST.py  download_wrapper.ipynb  dummyfile.txt  environment.yml  explore_stellar_densities.ipynb  extract_results_from_posteriors.ipynb  extract_results_from_posteriors.py  fit_hbm_ttvs.ipynb  fit_hbm_ttvs.py  fit_transit_shape.ipynb  fit_transit_shape.py  get_kic_ids.ipynb  investigate_limbdark_priors.ipynb  koi273.py.lprof  limbdarkening.pseudo  make_download_shell_and_target_list.ipynb  make_priority_list.ipynb  my_functions.py  new_build.ipynb  plot_posterior_transit_model.ipynb  plots_for_exo3.ipynb  pterodactyl.ipynb  pterodactyl_wings.py  pymc3_practice.ipynb  (+12 more)
.ipynb_checkpoints/: ALD_01a_detrend_and_estimate_ttvs-checkpoint.ipynb  ALD_01b_whiten_detrended_lightcurves-checkpoint.ipynb  ALD_02i_fit_transit_shape_independently-checkpoint.ipynb  ALD_02s_fit_transit_shape_simultaneously-checkpoint.ipynb  ALD_03_fit_hbm_ttvs-checkpoint.ipynb  build_cumulative_koi_catalog-checkpoint.ipynb  build_kepler_catalogue-checkpoint.ipynb  combine_umbrellas-checkpoint.ipynb  compare_injected_vs_quick_ttvs-checkpoint.ipynb  (+33 more)
(+3992 files in other folders)
