[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alderaan"
dynamic = ["version"]
description = "A python package for fast and robust exoplanet transit lightcurve modeling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "aesara-theano-fallback==0.1.0",
    "arviz==0.12.1",
    "astropy==5.3.2",
    "celerite2==0.2.1",
    "corner==2.2.2",
    "cython==3.0.10",
    "dynesty==2.1.3",
    "exoplanet==0.5.3",
    "exoplanet-core==0.1.2",
    "h5py==3.9.0",
    "ldtk==1.7.0",
    "lightkurve==2.1.1",
    "matplotlib==3.7.2",
    "numba==0.55.1",
    "numpy==1.21.6",
    "pandas==1.5.3",
    "pymc3==3.11.5",
    "pymc3-ext==0.1.1",
    "rebound==4.4.2",
    "scipy==1.7.3",
    "xarray==2022.9.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "pylint==3.3.4",
  "line_profiler",
  "ipywidgets==8.1.3",
  "notebook==6.4.13",
  "sphinx",
  "sphinxcontrib-napoleon",
  "sphinx-rtd-theme"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "alderaan.__version__"}
